<?xml version="1.0"?>
<package format="2">
  <name>ros2_snapshot</name>
  <version>0.0.2</version>
  <description>ROS2 Snapshot - contains workspace modeler and snapshot tools</description>

  <maintainer email="robotics@cnu.edu">CNU Robotics CHRISLab</maintainer>
  <author email="andrew.farney.22@cnu.edu">Andrew Farney</author>
  <license>Apache 2.0</license>

  <exec_depend>ros2pkg</exec_depend>
  <exec_depend>graphviz</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>